# vast

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Readme.md
include/: ArtifactDetector.h  FrameLoader.h  MainWindow.h  PluginManager.h  ReportGenerator.h
plugins/example/: CMakeLists.txt  example_detector.cpp
src/: ArtifactDetector.cpp  FrameLoader.cpp  MainWindow.cpp  PluginManager.cpp  ReportGenerator.cpp  main.cpp
src/detectors/: blur_detector.cu
tests/: test_frameloader.cpp  test_pluginmanager.cpp
